# mpi_avx_jacobi

./: CMakeLists.txt  main.cpp  main.py
headers/: avx.h  avx_matrix.h  bench.h  generator.h  jacobi.h  jacobi_mpi.h  matrix.h  mpi.h  util.h  vector.h
sources/: avx.cpp  bench.cpp  generator.cpp  jacobi.cpp  mpi.cpp  util.cpp
